tests/NormalTests/paczka1/fuzzy1/26288997.err
Error in line 1: kv7KaFsyz S288 21,8
Error in line 6: hoeG8po0xwK S265 12,1
Error in line 8: hoeG8po0xwK A567 93,7
Error in line 17: S288 S265 26,51
Error in line 23: kv7KaFsyz A986 328,3
Error in line 29: kv7KaFsyz S288 76,9
Error in line 38: S288 A567 C8,6
Error in line 26: S288 A567 36,2
